tests/paczka2/big_fuzzy/15503004.err
Error in line 2: XE21Mat S834 14,4
Error in line 5: bAHCw A541 12,1
Error in line 7: bAHCw S312 96,1
Error in line 24: 6K8N2Fd S580 -1,1
Error in line 26: SODJKxduf S580 4,0
Error in line 35: plTpj S'34 63,5
Error in line 33: plTpj A541 31,7
Error in line 38: bAHCw S312 318,70
Error in line 31: bAHCw S312 77,0
Error in line 36: plTpj S834 175,9
Error in line 21: 6K8N2Fd S580 46,5
Error in line 30: d2Ezgq S312 75,9
Error in line 42: SODJKxduf S312 0,3
Error in line 51: S
Error in line 52: 34 S5
Error in line 53: 0 49,7
Error in line 46: S834 S834 57,0
Error in line 63: XE21Mat S834 25,9
Error in line 71: plTpj S312 85,5
Error in line 60: S834 S580 145,1
Error in line 78: d2Ezgq A541 14,3
Error in line 74: bAHCw A541 323,4
Error in line 85: 6K8N2Fd S580 54,8
Error in line 88: bAHCw S834 8,9
Error in line 97: bAHCw S312 34,0
Error in line 105: plTpj S312 17,2
Error in line 109: plTpj S834 98,5
Error in line 111: plTpj S580 16,4
Error in line 115: XE21Mat S312 75,9
Error in line 129: XE21Mat S312 82,91
Error in line 123: XE21Mat S580 92,7
Error in line 131: bAHCw S834 11,2
Error in line 143: SODJKxduf S834 347,7
Error in line 135: XE21Mat S312 6,6
Error in line 162: SODJKxduf S580 25,8
Error in line 168: 6K8N2Fd S580 430,1
Error in line 173: S834 S834 36,2
Error in line 172: 6K8N2Fd A541 39,0
Error in line 176: 6K8N2Fd S834 4,2
Error in line 183: XE21Mat S580 17,1
Error in line 186: plTpj S580 23,0
Error in line 190: plTpj S834 4,3
Error in line 192: d2Ezgq S312 79,9
Error in line 195: plTpj S312 76,4
Error in line 198: plTpj S580 79,0
Error in line 203: XE21Mat A541 78,5
Error in line 199: d2Ezgq S312 67,4
Error in line 206: d2Ezgq A541 24,5
Error in line 207: d2Ezgq S580 21,1
Error in line 214: S834 S834 25,6
Error in line 212: SODJKxduf S312 383,7
Error in line 232: SODJKxduf S580 9,1
Error in line 233: SODJKxduf A541 97,3
Error in line 234: XE21Mat S312 9,2
Error in line 235: SODJKxduf S834 83,4
Error in line 247: SODJKxduf S84 92,6
Error in line 251: SODJKxduf S312 62,1
